// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Component should allow custom headers and footers: element 1`] = `
<div
  class="pf-c-backdrop"
>
  <div
    class="pf-l-bullseye"
  >
    <div
      aria-describedby="pf-modal-part-6"
      aria-label="t(modal.aria-label-default)"
      aria-labelledby="pf-modal-part-4"
      aria-modal="true"
      class="pf-c-modal-box pf-m-align-top"
      data-ouia-component-id="OUIA-Generated-Modal-5"
      data-ouia-component-type="PF4/ModalContent"
      data-ouia-safe="true"
      id="pf-modal-part-4"
      role="dialog"
      style="--pf-c-modal-box--m-align-top--spacer: 5%;"
    >
      <header
        class="pf-c-modal-box__header"
      >
        lorem ipsum
      </header>
      <div
        class="pf-c-modal-box__body"
        id="pf-modal-part-6"
      >
        <div>
          hello world
        </div>
      </div>
      <footer
        class="pf-c-modal-box__footer"
      >
        dolor sit
      </footer>
    </div>
  </div>
</div>
`;

exports[`Modal Component should allow custom headers and footers: function 1`] = `
<div
  class="pf-c-backdrop"
>
  <div
    class="pf-l-bullseye"
  >
    <div
      aria-describedby="pf-modal-part-6"
      aria-label="t(modal.aria-label-default)"
      aria-labelledby="pf-modal-part-4"
      aria-modal="true"
      class="pf-c-modal-box pf-m-align-top"
      data-ouia-component-id="OUIA-Generated-Modal-5"
      data-ouia-component-type="PF4/ModalContent"
      data-ouia-safe="true"
      id="pf-modal-part-4"
      role="dialog"
      style="--pf-c-modal-box--m-align-top--spacer: 5%;"
    >
      <header
        class="pf-c-modal-box__header"
      >
        lorem ipsum
      </header>
      <div
        class="pf-c-modal-box__body"
        id="pf-modal-part-6"
      >
        <div>
          hello world
        </div>
      </div>
      <footer
        class="pf-c-modal-box__footer"
      >
        dolor sit
      </footer>
    </div>
  </div>
</div>
`;

exports[`Modal Component should allow custom headers and footers: list 1`] = `
<div
  class="pf-c-backdrop"
>
  <div
    class="pf-l-bullseye"
  >
    <div
      aria-describedby="pf-modal-part-6"
      aria-label="t(modal.aria-label-default)"
      aria-labelledby="pf-modal-part-4"
      aria-modal="true"
      class="pf-c-modal-box pf-m-align-top"
      data-ouia-component-id="OUIA-Generated-Modal-5"
      data-ouia-component-type="PF4/ModalContent"
      data-ouia-safe="true"
      id="pf-modal-part-4"
      role="dialog"
      style="--pf-c-modal-box--m-align-top--spacer: 5%;"
    >
      <header
        class="pf-c-modal-box__header"
      >
        lorem ipsum
      </header>
      <div
        class="pf-c-modal-box__body"
        id="pf-modal-part-6"
      >
        <div>
          hello world
        </div>
      </div>
      <footer
        class="pf-c-modal-box__footer"
      >
        dolor sit
      </footer>
    </div>
  </div>
</div>
`;

exports[`Modal Component should allow custom headers and footers: string 1`] = `
<div
  class="pf-c-backdrop"
>
  <div
    class="pf-l-bullseye"
  >
    <div
      aria-describedby="pf-modal-part-6"
      aria-label="t(modal.aria-label-default)"
      aria-labelledby="pf-modal-part-4"
      aria-modal="true"
      class="pf-c-modal-box pf-m-align-top"
      data-ouia-component-id="OUIA-Generated-Modal-5"
      data-ouia-component-type="PF4/ModalContent"
      data-ouia-safe="true"
      id="pf-modal-part-4"
      role="dialog"
      style="--pf-c-modal-box--m-align-top--spacer: 5%;"
    >
      <header
        class="pf-c-modal-box__header"
      >
        lorem ipsum
      </header>
      <div
        class="pf-c-modal-box__body"
        id="pf-modal-part-6"
      >
        <div>
          hello world
        </div>
      </div>
      <footer
        class="pf-c-modal-box__footer"
      >
        dolor sit
      </footer>
    </div>
  </div>
</div>
`;

exports[`Modal Component should allow custom headers and footers: undefined 1`] = `
<div
  class="pf-c-backdrop"
>
  <div
    class="pf-l-bullseye"
  >
    <div
      aria-describedby="pf-modal-part-6"
      aria-label="t(modal.aria-label-default)"
      aria-labelledby="pf-modal-part-4"
      aria-modal="true"
      class="pf-c-modal-box pf-m-align-top"
      data-ouia-component-id="OUIA-Generated-Modal-5"
      data-ouia-component-type="PF4/ModalContent"
      data-ouia-safe="true"
      id="pf-modal-part-4"
      role="dialog"
      style="--pf-c-modal-box--m-align-top--spacer: 5%;"
    >
      <div
        class="pf-c-modal-box__body"
        id="pf-modal-part-6"
      >
        <div>
          hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Component should allow modifying specific and custom props: aria-label 1`] = `
<Modal
  actions={Array []}
  appendTo={
    <div
      class="quipucords-modal quipucords-modal__rcue-width"
    >
      <div />
    </div>
  }
  aria-describedby=""
  aria-label="dolor sit"
  aria-labelledby=""
  className=""
  hasNoBodyWrapper={false}
  isOpen={false}
  onClose={[Function]}
  ouiaSafe={true}
  position="top"
  positionOffset="5%"
  showClose={false}
  title=""
  titleIconVariant={null}
  titleLabel=""
  variant={null}
>
  <Portal
    containerInfo={<div />}
  >
    <ModalContent
      actions={Array []}
      aria-describedby=""
      aria-label="dolor sit"
      aria-labelledby=""
      boxId="pf-modal-part-2"
      className=""
      descriptorId="pf-modal-part-4"
      hasNoBodyWrapper={false}
      isOpen={false}
      labelId="pf-modal-part-3"
      onClose={[Function]}
      ouiaId="OUIA-Generated-Modal-3"
      ouiaSafe={true}
      position="top"
      positionOffset="5%"
      showClose={false}
      title=""
      titleIconVariant={null}
      titleLabel=""
      variant={null}
    />
  </Portal>
</Modal>
`;

exports[`Modal Component should allow modifying specific and custom props: backdrop 1`] = `
<Modal
  actions={Array []}
  appendTo={
    <div
      class="quipucords-modal quipucords-modal__hide-backdrop quipucords-modal__rcue-width"
    >
      <div />
    </div>
  }
  aria-describedby=""
  aria-label="t(modal.aria-label-default)"
  aria-labelledby=""
  className=""
  hasNoBodyWrapper={false}
  isOpen={false}
  onClose={[Function]}
  ouiaSafe={true}
  position="top"
  positionOffset="5%"
  showClose={false}
  title=""
  titleIconVariant={null}
  titleLabel=""
  variant={null}
>
  <Portal
    containerInfo={<div />}
  >
    <ModalContent
      actions={Array []}
      aria-describedby=""
      aria-label="t(modal.aria-label-default)"
      aria-labelledby=""
      boxId="pf-modal-part-1"
      className=""
      descriptorId="pf-modal-part-3"
      hasNoBodyWrapper={false}
      isOpen={false}
      labelId="pf-modal-part-2"
      onClose={[Function]}
      ouiaId="OUIA-Generated-Modal-2"
      ouiaSafe={true}
      position="top"
      positionOffset="5%"
      showClose={false}
      title=""
      titleIconVariant={null}
      titleLabel=""
      variant={null}
    />
  </Portal>
</Modal>
`;

exports[`Modal Component should allow modifying specific and custom props: isContentOnly 1`] = `
<Modal
  actions={Array []}
  appendTo={
    <div
      class="quipucords-modal quipucords-modal__hide-backdrop quipucords-modal__rcue-width"
    >
      <div />
    </div>
  }
  aria-describedby=""
  aria-label="t(modal.aria-label-default)"
  aria-labelledby=""
  className=""
  hasNoBodyWrapper={true}
  isOpen={false}
  onClose={[Function]}
  ouiaSafe={true}
  position="top"
  positionOffset="5%"
  showClose={false}
  title=""
  titleIconVariant={null}
  titleLabel=""
  variant={null}
>
  <Portal
    containerInfo={<div />}
  >
    <ModalContent
      actions={Array []}
      aria-describedby=""
      aria-label="t(modal.aria-label-default)"
      aria-labelledby=""
      boxId="pf-modal-part-3"
      className=""
      descriptorId="pf-modal-part-5"
      hasNoBodyWrapper={true}
      isOpen={false}
      labelId="pf-modal-part-4"
      onClose={[Function]}
      ouiaId="OUIA-Generated-Modal-4"
      ouiaSafe={true}
      position="top"
      positionOffset="5%"
      showClose={false}
      title=""
      titleIconVariant={null}
      titleLabel=""
      variant={null}
    />
  </Portal>
</Modal>
`;

exports[`Modal Component should render a basic component: basic 1`] = `
<Modal
  aria-label={null}
  backdrop={true}
  className={null}
  footer={null}
  header={null}
  isContentOnly={false}
  position="top"
  positionOffset="5%"
  showClose={false}
  t={[Function]}
  variant={null}
>
  <Modal
    actions={Array []}
    appendTo={
      <div
        class="quipucords-modal quipucords-modal__rcue-width"
      >
        <div />
      </div>
    }
    aria-describedby=""
    aria-label="t(modal.aria-label-default)"
    aria-labelledby=""
    className=""
    hasNoBodyWrapper={false}
    isOpen={false}
    onClose={[Function]}
    ouiaSafe={true}
    position="top"
    positionOffset="5%"
    showClose={false}
    title=""
    titleIconVariant={null}
    titleLabel=""
    variant={null}
  >
    <Portal
      containerInfo={<div />}
    >
      <ModalContent
        actions={Array []}
        aria-describedby=""
        aria-label="t(modal.aria-label-default)"
        aria-labelledby=""
        boxId="pf-modal-part-0"
        className=""
        descriptorId="pf-modal-part-2"
        hasNoBodyWrapper={false}
        isOpen={false}
        labelId="pf-modal-part-1"
        onClose={[Function]}
        ouiaId="OUIA-Generated-Modal-1"
        ouiaSafe={true}
        position="top"
        positionOffset="5%"
        showClose={false}
        title=""
        titleIconVariant={null}
        titleLabel=""
        variant={null}
      />
    </Portal>
  </Modal>
</Modal>
`;
